# ini.h

./: .gitignore  404.html  README.md  index.html  ini.h  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: documentation.yml  macos.yml  ubuntu.yml  windows.yml
api/file/constructors/: index.html
api/file/file/: index.html
api/file/functions/add_section/: index.html
api/file/functions/clear/: index.html
api/file/functions/empty/: index.html
api/file/functions/has_section/: index.html
api/file/functions/remove_section/: index.html
api/file/functions/rename_section/: index.html
api/file/functions/size/: index.html
api/file/functions/write/: index.html
api/file/operators/operator[]/: index.html
api/ini_namespace/: index.html
api/load/: index.html
api/open/: index.html
api/section/constructors/: index.html
api/section/functions/clear/: index.html
api/section/functions/empty/: index.html
api/section/functions/get/: index.html
api/section/functions/has_key/: index.html
api/section/functions/remove_key/: index.html
api/section/functions/rename_key/: index.html
api/section/functions/set/: index.html
api/section/functions/size/: index.html
api/section/section/: index.html
docs/: index.md
docs/api/: ini_namespace.md  load.md  open.md
docs/api/file/: constructors.md  file.md
docs/api/section/: constructors.md  section.md
docs/ini/: ini_namespace.md
docs/ini_namespace/: ini_namespace.md
search/: search_index.json
test/: CMakeLists.txt  example.ini  main.cpp  test_ini.cpp  test_ini.h.cpp
(+19 files in other folders)
